[package]
name = "ecdsa-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
getrandom = {version = "0.2", features = ["js"]}
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}

# TODO: use https://github.com/ZenGo-X/multi-party-ecdsa once
# TODO: https://github.com/ZenGo-X/multi-party-ecdsa/pull/144 is merged
[dependencies.multi-party-ecdsa]
git = "https://github.com/tmpfs/multi-party-ecdsa"
branch = "curv-0.8"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
#rand = { version="0.6.5", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
