[package]
name = "common"
version = "0.2.0"
edition = "2018"

[dependencies]
serde = {version = "1", features = ["derive"]}
# NOTE: we don't use these crates but if we don't declare them here
# NOTE: then the wasm modules will fail to compile
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
rand = "0.8"
hex = "0.4"
