[package]
name = "ecdsa-wasm"
version = "0.1.0"
edition = "2018"
default-run = "ecdsa-wasm"

[dependencies]
anyhow = "1"
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3"
once_cell = "1.8"
uuid = { version = "0.8", features = ["v4"] }
json-rpc2 = { version = "0.10.5", features = ["async"] }
async-trait = "0.1"

common = {path = "../common"}

[[bin]]
name = "ecdsa-wasm"
path = "src/bin/main.rs"
