[package]
name = "mpc-websocket-cli"
version = "0.2.0"
edition = "2021"
default-run = "mpc-websocket"

[dependencies]
mpc-websocket = {path = "../library"}
structopt = "0.3"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "mpc-websocket"
path = "src/bin/main.rs"

[profile.release]
strip = true
