[package]
name = "mpc-websocket-cli"
version = "0.2.0"
edition = "2021"
publish = false
license = "MIT"
default-run = "mpc-websocket"

[dependencies]
mpc-websocket = {path = "../library"}
clap = { version = "3", features = ["derive"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "mpc-websocket"
path = "src/bin/main.rs"

[profile.release]
strip = true
