[package]
name = "ecdsa-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
common = {path = "../common"}
getrandom = {version = "0.1.16", features = ["wasm-bindgen"]}
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
rand = { version="0.6.5", features = ["wasm-bindgen"] }
#rand = { version="0.7.3", features = ["getrandom"] }
console_error_panic_hook = "0.1.6"
serde_json = "1"

# TODO: use https://github.com/ZenGo-X/multi-party-ecdsa once
# TODO: https://github.com/ZenGo-X/multi-party-ecdsa/pull/144 is merged
[target.'cfg(target_arch = "wasm32")'.dependencies.multi-party-ecdsa]
git = "https://github.com/tmpfs/multi-party-ecdsa"
branch = "curv-0.8"
default-features = false
