[package]
name = "mpc-snap-wasm"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Webassembly utilities for the threshold signatures snap"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
web3-keystore = "0.4"
rand = "0.8"
getrandom = {version = "0.2", features = ["js"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
chacha20poly1305 = { version = "0.9", features = ["std"] }
sha3 = "0.10"
thiserror = "1"
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
#branch = "master"
default-features = false
rev = "c94065fbf37132dccc7955cf2627866e87c162bf"
version = "*"
