[package]
name = "mpc-snap-wasm"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Webassembly utilities for the threshold signatures snap"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
web3-keystore = "0.4"
web3-transaction = {path = "../../../../web3/transaction"}
web3-signature = {path = "../../../../web3/signature"}
rand = "0.8"
getrandom = {version = "0.2", features = ["js"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
log = "0.4"
wasm-log = "0.3"
hex = "0.4"

[dependencies.curv-kzen]
version = "0.10"
features = ["num-bigint"]
default-features = false

[dependencies.paillier]
version = "0.4.3"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/webb-tools/multi-party-ecdsa"
default-features = false
version = "*"
